# verus

./: .gitignore
dependencies/syn/src/: verus.rs
explorer/: .gitignore  Cargo.toml  rust-toolchain.toml  setup.sh
explorer/scripts/: build-z3-wasm.sh
explorer/src/: lib.rs
explorer/web/: index.html
source/: Cargo.toml
source/air/: Cargo.toml
source/air/src/: context.rs  emitter.rs  lib.rs  messages.rs  printer.rs  smt_process.rs  smt_verify.rs  time.rs
source/builtin/src/: lib.rs
source/builtin_macros/: Cargo.toml
source/builtin_macros/src/: lib.rs  syntax.rs
source/cargo-verus/src/: main.rs  plan.rs  subcommands.rs  test_utils.rs
source/cargo-verus/tests/: test_build_new.rs
source/docs/guide/src/: SUMMARY.md
source/rust_verify/: Cargo.toml
source/rust_verify/src/: attributes.rs  commands.rs  driver.rs  externs.rs  fn_call_to_vir.rs  import_export.rs  lib.rs  main.rs  rust_to_vir_expr.rs  rust_to_vir_func.rs  spans.rs  verifier.rs  verus_items.rs
source/rust_verify_test/tests/: arrays.rs  btree.rs  hash.rs  iterators.rs  logatom.rs  loops.rs  slices.rs  syntax_attr.rs  vec.rs
source/rust_verify_test/tests/common/: mod.rs
source/rustc_mir_build/: Cargo.toml
source/rustc_mir_build_additional_files/: verus.rs
source/state_machines_macros/: Cargo.toml
source/state_machines_macros/src/: lib.rs
source/vir/src/: ast.rs  ast_to_sst.rs  ast_to_sst_func.rs  ast_util.rs  ast_visitor.rs  context.rs  def.rs  early_exit_cf.rs  headers.rs  heuristics.rs  interpreter.rs  messages.rs  modes.rs  poly.rs  printer.rs  prune.rs  resolution_inference.rs  sst.rs  sst_to_air.rs  sst_to_air_func.rs  sst_util.rs  sst_vars.rs  sst_visitor.rs  traits.rs  triggers.rs  triggers_auto.rs  well_formed.rs
source/vstd/: atomic.rs  atomic_relaxed.rs  endian.rs  layout.rs  prelude.rs  raw_ptr.rs  simple_pptr.rs  string.rs  vstd.rs
source/vstd/std_specs/: btree.rs  core.rs  hash.rs  iter.rs  slice.rs  vec.rs  vecdeque.rs
