[package]
name = "verus-explorer"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
vir = { path = "../source/vir" }
air = { path = "../source/air" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
