[package]
name = "verus_builtin_macros"
version = "0.0.0-2026-04-12-0118"
edition = "2018"
license = "MIT"
description = "Verus Builtin Macros: Various macros used by Verus"
homepage = "https://github.com/verus-lang/verus"
repository = "https://github.com/verus-lang/verus"
readme = "../../README.md"
keywords = ["verus", "verified-rust", "verification"]
categories = ["development-tools"]

# Regular library (not `proc-macro = true`). User-facing macros are exposed
# via `pub macro NAME() {}` decl_macro stubs; consumers register the real
# proc-macro descriptors (the `MACROS` slice in src/lib.rs) with the patched
# `rustc_metadata::proc_macro_registry`, which swaps each stub's
# `SyntaxExtensionKind` for a Bang/Attr/Derive wrapper at resolve time. This
# lets the same crate serve both the host (rust_verify) and rustc-in-wasm
# (verus-explorer), neither of which can dlopen a proc-macro dylib in its
# registration context.

[dependencies]
proc-macro2 = "1.0.39"
quote = "1.0"
synstructure = "0.13.2"
syn = { version = "2.0", features = ["full", "visit", "visit-mut", "extra-traits"] }
verus_syn = { version = "=0.0.0-2026-04-05-0114", path = "../../dependencies/syn", features = ["full", "visit", "visit-mut", "extra-traits"] }
verus_prettyplease = { version = "=0.0.0-2026-04-12-0118", path = "../../dependencies/prettyplease" }

[package.metadata.verus]
is-builtin-macros = true

[features]
vpanic = []

[lints]
workspace = true
